# Task_6_Race_report

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/reporting/: cli.py  report.py
tests/: conftest.py  test_cli.py  test_report.py
