[metadata]
name = Report of racing
version = 1.6.1
author = Ivan
author_email = ivan@example.com
description = Compiling a race report with three files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://test.pypi.org/project/Report-of-racing/
project_urls =
    Bug Tracker = https://git.foxminded.com.ua/Ivan_Shikhanov/task-6-report-of-monaco-2018-racing.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyparsing == 2.4.7
    beautifultable == 1.0.1
python_requires = >=3.9

[options.packages.find]
where = src